[package]
name = "quic_libp2p_example"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p-quic = { version="0.6.1", features=["noise"]}
anyhow = "1.0.41"
async-global-executor = "2.0.2"
futures = "0.3.15"
rand_core = "0.5.1"
tracing = "0.1.26"
async-trait = "0.1.50"
libp2p = { version = "0.39.1", default-features = false, features = ["request-response"] }
rand = "0.8.4"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }

[features]
default = []
bitcoin = []
ethereum = []
solana = []

[[example]]
name = "quic_libp2p_example"
